--- a/views/base.pug
+++ b/views/base.pug
@@ -19,7 +19,9 @@ html(lang="en")
         
         // FOOTER
         include footer 
-        script(defer src='/js/mapbox.js')
-        
+        script(type='module' src='/js/bundled/index.js') 
+        //- script(defer src='/js/mapbox.js')
+        //- script(defer src="/js/login.js") 
+        //- script(src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.4/axios.min.js" integrity="sha512-LUKzDoJKOLqnxGWWIBM4lzRBlxcva2ZTztO8bTcWPmDSpkErWx0bSP4pdsjNH8kiHAUPaT06UXcb+vOEZH+HpQ==" crossorigin="anonymous" referrerpolicy="no-referrer")  
 
 
