--- a/views/header.pug
+++ b/views/header.pug
@@ -3,6 +3,12 @@ header.header
         a.nav__el(href="/") All Tours
     .header__logo 
         img(src="/img/logo-white.png", alt="Natours Logo")
-    nav.nav.nav--user   
-        button.nav__el Log in
-        button.nav__el.nav__el--cta Sign up
+    nav.nav.nav--user  
+        if user
+            a.nav__el.nav__el--logout(href='#') Log out 
+            a.nav__el(href='#')
+                img.nav__user-img(src=`/img/users/${user.photo}` alt=`Photo of ${user.name}`)
+                span= user.name.split(' ')[0]
+        else
+            a(href="/login").nav__el.nav__el--cta Log in
+            a(href="#").nav__el Sign up
