--- a/views/account.pug
+++ b/views/account.pug
@@ -42,7 +42,11 @@ block content
             .user-view__content
                 .user-view__form-container
                     h2.heading-secondary.ma-bt-md Your account settings
-                    form.form.form-user-data(action='/submit-user-data' method='POST')
+                    //- without api
+                    //- form.form.form-user-data(action='/submit-user-data' method='POST')
+                    //- if you want to send files add a attribute enctype='multipart/formdata '
+                    //- With api
+                    form.form.form-user-data
                         .form__group
                             label.form__label(for='name') Name
                             input#name.form__input(type='text', value=`${user.name}`, required, name='name')
@@ -51,13 +55,14 @@ block content
                             input#email.form__input(type='email', value=`${user.email}`, required, name='email')
                         .form__group.form__photo-upload
                             img.form__user-photo(src=`/img/users/${user.photo}`, alt='User photo')
-                            a.btn-text(href='') Choose new photo
+                            input.form__upload(type="file", accept='image/*', id='photo', name='photo')
+                            label(for='photo') Choose new Photo
                         .form__group.right
                             button.btn.btn--small.btn--green Save settings
                 .line &nbsp;
                 .user-view__form-container
                     h2.heading-secondary.ma-bt-md Password change
-                    form.form.form-user-settings
+                    form.form.form-user-password
                         .form__group
                             label.form__label(for='password-current') Current password
                             input#password-current.form__input(type='password', placeholder='••••••••', required, minlength='8')
@@ -68,5 +73,5 @@ block content
                             label.form__label(for='password-confirm') Confirm password
                             input#password-confirm.form__input(type='password', placeholder='••••••••', required, minlength='8')
                         .form__group.right
-                            button.btn.btn--small.btn--green Save password
+                            button.btn.btn--small.btn--green.btn--save-password Save password
 
