--- a/views/base.pug
+++ b/views/base.pug
@@ -9,6 +9,7 @@ html(lang="en")
             link(rel="stylesheet", href="/css/style.css")
             link(rel="shortcut icon", href="/img/favicon.png", type="image/png")
             link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Lato:300,300i,700")
+            script(src="https://js.stripe.com/v3/")
             title Natours |
     body
         // HEADER
