--- a/views/tour.pug
+++ b/views/tour.pug
@@ -11,7 +11,6 @@ block append head
 
 
 
-
 block content 
     section.section-header
         .header__hero
@@ -106,4 +105,7 @@ block content
         .cta__content
             h2.heading-secondary What are you waiting for?
             p.cta__text= `${tour.duration} days. 1 adventure. Infinite memories. Make it yours today!`
-            button.btn.btn--green.span-all-rows Book tour now!
+            if user
+                button.btn.btn--green.span-all-rows#book-tour(data-tour-id=`${tour.id}`) Book tour now!
+            else 
+                a.btn.btn--green.span-all-rows(href='/login') Log in to book Tour!
